# transfer-window-old

./: Cargo.toml  black-box-solver.py  hyperbola-selection.py  integrator.py  plan.md  profile.json
.VSCodeCounter/2023-12-20_20-35-05/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
experiments/: black-box-solver.py
experiments/prediction-methods/: chebyshev.py  kepler.py  main.py
resources/shaders/: geometry.frag  geometry.vert  icon.frag  icon.vert
src/: app.rs  camera-f32.rs  camera.rs  components.rs  entity_builder.rs  id_storage.rs  main.rs  object.rs  renderer.rs  rendering.rs  resources.rs  state.rs  storage.rs  systems.rs  util.rs
src/components/: celestial_body_component.rs  icon_component.rs  mass_component.rs  name_component.rs  parent_component.rs  position_component.rs  sphere_of_influence_component.rs  trajectory_component.rs  velocity_component.rs
src/object/: conic.rs  orbit.rs  orbit_description.rs  orbit_direction.rs  orbit_point.rs  path.rs  scary_maths.rs  trajectory.rs  trajectory_integrator.rs  visual_orbit_point.rs
src/renderer/: camera.rs  shader_program.rs
src/rendering/: geometry_renderer.rs  icon_renderer.rs  texture.rs  texture_renderer.rs  vertex_array_object.rs
src/storage/: component_storage.rs  components.rs  entity_allocator.rs  entity_builder.rs  entity_type.rs  index_storage.rs
src/systems/: camera_update_system.rs  debug_system.rs  delta_time_update_system.rs  deselect_system.rs  icon_click_system.rs  icon_position_update_system.rs  icon_precedence_system.rs  (+16 more)
(+57 files in other folders)
